2012-02-20 Riccardo Mottola <rm@gnu.org>

	* AppDelegate.[h,m]
	Do not open an untitled document. Add boilerplate.
	
2012-02-19: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ZipperDocument.m: setDoubleAction to open the double
	  clicked file with its default viewer, rework opening a
	  file with the default openApp
	* PreferencesController.m: Go to the GNUSTEP_SYSTEM_APPS
	  directory when looking for a default open application,
	  use an even easier way now.
	* Connect the Document/View in the Main Menu to the
	  double Click Action

2012-02-17: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* RarArchive.m fix the offset of the header and footer
	  of unar output
	* SevenZipArchive.m fix the offset of the header and
	  footer of 7z output
	* Preferences.m set the default rar executable to unrar
	* ZipperDocument.gorm make the columns in the table resizable

2012-02-16 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile
	* PreferencesController.h
	* PreferencesController.m
	Migrated preferences GUI to Gorm, fixed typos.

2012-02-15 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* ZipperDocument.m replace deprecated sel_eq with sel_isEqual
	* GzipArchive.m, TarArchive.m, remove some weird ;

2012-02-15 Riccardo Mottola <rm@gnu.org>

	* GNUmakefile
	* Resources/ZipperDocument.gorm
	* ZipperDocument.[h,m]
	Migrate to Gorm.

2012-02-15 Riccardo Mottola <rm@gnu.org>

	* ZipperDocument.h
	Explicit IBOutlet.

	* AppDelegate.m
	* GNUmakefile
	* ZipperInfo.plist
	* main.m
	* Resources/MainMenu.gorm
	Migrate main menu to Gorm.

2012-02-13 Riccardo Mottola <rm@gnu.org>

	* TarArchive.m:
	Fix date parsing in BSD-tar archives, sanity checks.

	* ZipArchive.m:
	Fix date parsing and some sanity checks.

2012-02-13 Riccardo Mottola <rm@gnu.org>

	* TarArchive.m:
	Fix date parsing in gnu-tar archives, sanity checks.

2012-02-13 Riccardo Mottola <rm@gnu.org> for Sebastian Reitenbach

	* Resources/MainMenu-GNUstep.gsmarkup
	Fix menu equivalents.
